--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.6.1
+elastic-transport==8.15.0
+elasticsearch==8.15.0
 email_validator==2.2.0
 Flask==3.0.3
 flask-babel==4.0.0
