--- a/requirements.txt
+++ b/requirements.txt
@@ -5,35 +5,43 @@ attrs==24.2.0
 babel==2.16.0
 blinker==1.8.2
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==43.0.1
 dnspython==2.6.1
 elastic-transport==8.15.0
 elasticsearch==8.15.0
-email_validator==2.2.0
-Flask==3.0.3
+email-validator==2.2.0
+flask==3.0.3
 flask-babel==4.0.0
 Flask-Login==0.6.3
-Flask-Mail==0.10.0
+flask-mail==0.10.0
 Flask-Migrate==4.0.7
 Flask-Moment==1.0.6
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.1
+flask-sqlalchemy==3.1.1
+flask-wtf==1.2.1
 greenlet==3.0.3
+gunicorn==23.0.0
 idna==3.8
+importlib-metadata==8.5.0
+importlib-resources==6.4.5
 itsdangerous==2.2.0
-Jinja2==3.1.4
+jinja2==3.1.4
 langdetect==1.0.9
 Mako==1.3.5
 MarkupSafe==2.1.5
 packaging==24.1
+pycparser==2.22
 PyJWT==2.9.0
+PyMySQL==1.1.1
 python-dotenv==1.0.1
 pytz==2024.1
 requests==2.32.3
 six==1.16.0
 SQLAlchemy==2.0.34
-typing_extensions==4.12.2
+typing-extensions==4.12.2
 urllib3==2.2.2
-Werkzeug==3.0.4
-WTForms==3.1.2
+werkzeug==3.0.4
+wtforms==3.1.2
+zipp==3.20.2
